<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scenario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="makisp.gohome.ScenarioActivity"
    android:background="@drawable/papyros">

    <TextView
        android:text="@string/scenario_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/scenario_title"
        android:textColorLink="?attr/colorPrimaryDark"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textStyle="normal|bold|italic"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:text="@string/scenario_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scenario_story"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="18sp"
        android:layout_marginTop="31dp"
        android:width="300dp"
        android:layout_below="@+id/scenario_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:text="@string/button_choice2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_choice2"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button_choice1"
        android:layout_alignStart="@+id/button_choice1" />

    <Button
        android:text="@string/button_choice1"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_choice1"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_above="@+id/button_choice2"
        android:layout_alignRight="@+id/scenario_story"
        android:layout_alignEnd="@+id/scenario_story"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

</RelativeLayout>
